# conduit

./: .gitignore  Vizsgaremek.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: master.yml  selenium-tests.yml
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: history-trend.json  history.json
14/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
15/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: history.json
15/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  summary.json
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
16/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
docs/: Conduit_TJK_FP.xls  Conduit_TJK_FP.xlsx  slides.odp
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
src/: server.ts
tests/: conftest.py  test_01_main_page.py  test_02_cookie_policy.py  test_02_login.py  test_03_signup.py  test_04_login.py  test_05_data_handling.py  test_06_logout.py  test_dummy.py  test_main_page.py
(+1951 files in other folders)
